# algorithm_engineering

./: README.md
exam_assignments/: 10_answers.md  11_answers.md  12_answers.md  13_answers.md  1_answers.md  2_answers.md  3_answers.md  4_answers.md  5_answers.md  6_answers.md  7_answers.md  8_answers.md  9_answers.md  README.md
exam_assignments/1_lecture/: 1_answer.md  1_answers.md
exam_assignments/1_lecture/assignment/: RESULTS.md  parallel_program_slide_22.cpp  run_this_to_compile.sh  slide22_pi_monte_carlo  slide22_pi_monte_carlo.cpp
exam_assignments/1_lecture/code/: Makefile  coding_warmup_slide_20.cpp  hello_slide_13.cpp
exam_assignments/1_lecture/coding_warmup/: slide13_hello  slide17_numerical_pi.cpp
exam_assignments/1_lecture/warmup/: RESULTS.md  run_this_to_compile.sh  slide15_hello  slide15_hello.cpp  slide17_numerical_pi
exam_assignments/2_lecture/: 2_answers.md
exam_assignments/2_lecture/assignment/: numerical_pi_omp_for  numerical_pi_omp_for.cpp  run_this_to_compile.sh
exam_assignments/2_lecture/warmup/: run_this_to_compile.sh  slide13_race_condition_std_mutex  slide13_race_condition_std_mutex.cpp  slide16_denoising_schedule  slide16_denoising_schedule.cpp  slide21_smallest_solution  test  (+1 more)
exam_assignments/3_lecture/: 3_answers.md
project/: Analysis_Book.ipynb  CMakeLists.txt  ImageToCSV.py  README.md  image_enancer.py
project/include/: Benchmark.hpp  CSVWriter.hpp  ImageFilter.hpp  JPGConverter.hpp  PPMConverter.hpp
project/src/: Benchmark.cpp  CSVWriter.cpp  ImageFilter.cpp  JPGConverter.cpp  PPMConverter.cpp  main.cpp
(+8 files in other folders)
